--- a/my-react-ts-app/src/styling/App.scss
+++ b/my-react-ts-app/src/styling/App.scss
@@ -16,6 +16,16 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.svg-url-class {
+  width: 100px;
+  margin: 0px;
+  padding: 0px;
+  svg {
+    height: 100px;
+    width: 100%;
+  }
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
